# EDA-IFB-CC

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
Arvore/: CMakeLists.txt  avl_tree.c  avl_tree.h  bst.c  bst.h  bst.h.gch  treap.c  treap.h  tree.c  tree.h
CMake/include/: triangulo.h
CMake/src/: CMakeLists.txt
CMake/test/: teste_main.c
Examples/: CMakeLists.txt  alocacao_matrix_exemplo_1.c  deque_crud.c  stack_crud.c
Exemplos/: CMakeLists.txt  alocacao1.c  alocacao2.c  alocacao_matrix_exemplo_1.c  alocacao_ponteiro_exemplo_1.c  alocacao_ponteiro_exemplo_2.c  alocacao_vetor_exemplo_1.c  bst_crud.c  bst_example_1.c  bst_exemplo_1.c  busca_binaria_exemplo.c  busca_binaria_recursiva_exemplo.c  exemplo_afericao_de_wall_clock.c  exemplo_fila_cantina.c  exemplo_fila_de_prioridade_cantina.c  exemplo_forall.c  fila_crud.c  funcoes_exemplo_1.c  list_crud.c  list_filter.c  list_quicksort.c  lista_crud.c  lista_encadeada_crud.c  memory_leak_example_1.c  memory_leak_exemplo_1.c  memory_leak_exemplo_2.c  memory_leak_exemplo_3.c  ordenacao_exemplo_1.c  passagem_por_referencia_2.c  passagem_por_referencia_3.c  passagem_por_referencia_exemplo_1.c  passagem_por_referencia_exemplo_2.c  passagem_por_referencia_exemplo_3.c  passagem_por_valor.c  passagem_por_valor_exemplo_1.c  pilha_crud.c  ponteiro-vetor.c  ponteiro_exemplo_1.c  ponteiro_exemplo_2.c  ponteiro_para_funcao_exemplo_1.c  (+8 more)
Fila/: deque.c  deque.h  priority_queue.c  queue.c  queue.h
Filas/: CMakeLists.txt  priority_queue.c  priority_queue.h  queue.c  queue.h
GDB/: exemplo_gdb_1.c
List/: CMakeLists.txt  dlist.c  dlist.h  list.c  list.h
Lista/: CMakeLists.txt  dlist.c  list.c  list.h
Listas/: CMakeLists.txt  dlist.c  dlist.h  list.c  list.h  lista_encadeada.c  lista_encadeada.h
Listas de Exercícios/Lista 1/: intersecao-vetores.c  troco.c
Listas de Exercícios/Lista 2/: l03e02.c
Listas de Exercícios/Ponteiros/: ex9.c
Listas de Exercícios/Variados/: troco_recursivo.c
Listas de Exercícios/arvores/: ex10.c  ex3.c
Modularização/: README.md  quadrado.c  quadrado.h
Ordenacao/: bubble_sort.c  counting_sort.c  heap_sort.c  insertion_sort.c  merge_sort.c  merge_sort.h  quick_sort.h  selection_sort.c  selection_sort.h
Pilha/: CMakeLists.txt  stack.c  stack.h
Provas Anteriores/: P1-2016-2-Q4.c  P1-2016-2-Q5.c  P1-2017-1.c
Queue/: deque.c  deque.h
Sorting/: counting_sort.h  heap_sort.h  insertion_sort.c  insertion_sort.h  ordenacao.h  quick_sort.c  radix_sort.c  sorting.h
Stack/: stack.c  stack.h
Testes/: CMakeLists.txt  test.h  teste_avl_tree.c  teste_bst.c  teste_deque.c  teste_dlist.c  teste_list.c  teste_main.c  teste_ordenacao.c  teste_priority_queue.c  teste_queue.c  teste_stack.c  teste_treap.c
Tree/: bst.c
Utils/: CMakeLists.txt  alloc.c
Vector/: CMakeLists.txt  vector.c  vector.h
Vetores/: CMakeLists.txt  alocacao_vetor_1.c
arvore/: avl_tree.c  treap.c
cmake/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/test/: CMakeLists.txt  teste_quadrado.c  teste_triangulo.c
dynamic_array/: dynamic_array.h  vector.c  vector.h
examples/: alocacao_matrix_exemplo_1.c  alocacao_ponteiro_exemplo_1.c  alocacao_ponteiro_exemplo_2.c  alocacao_ponteiro_exemplo_3.c  aritmetica_de_ponteiros_1.c  bst_crud.c  exemplo_fila_de_prioridade_cantina.c  generic_bst_example.c  generic_priority_queue_crud.c  list_quicksort.c  passagem_por_referencia_exemplo_1.c  passagem_por_referencia_exemplo_2.c  passagem_por_referencia_exemplo_3.c  passagem_por_referencia_exemplo_4.c  ponteiro_exemplo_1.c  ponteiro_exemplo_2.c  ponteiro_para_funcao_exemplo_1.c  ponteiro_vetor_exemplo_1.c  qsort_bsearch_exemplo.c  remove_nulo_lista_recursivamente.c  stack_crud.c  stack_overflow.c  uri_1068.c  wild_pointer_exemplo_1.c
exemplos/: alocacao_vetor_exemplo_1.c  busca_binaria_recursiva_exemplo.c  deque_crud.c  dlist_crud.c  dynamic_array_crud.c  exemplo_alocacao_vetor_de_strings.c  exemplo_fila_cantina.c  exemplo_forall.c  generic_deque_crud.c  generic_list_crud.c  generic_queue_crud.c  generic_stack_crud.c  list_crud.c  list_filter.c  list_quicksort.c  memory_leak_exemplo_3.c  passagem_por_referencia_exemplo_2.c  passagem_por_referencia_exemplo_3.c  ponteiro_exemplo_1.c  ponteiro_para_funcao_exemplo_2.c  priority_queue_crud.c  queue_crud.c  remove_nulo_lista_recursivamente.c  uri_1068.c
fila/: deque.c  deque.h  priority_queue.c  priority_queue.h  queue.c  queue.h
gdb/: exemplo_gdb_1.c  exemplo_gdb_2.c  exemplo_gdb_3.c
list/: generic_dlist.h  generic_list.c  generic_list.h  list.c
lista/: dlist.c  dlist.h  generic_dlist.c  generic_dlist.h  list.c  list.h
listas-de-exercicios/Ordenação/: ex9.c
listas-de-exercicios/arvores/: ex3.c  (+4 more)
lists/: dlist.c  generic_dlist.sync-conflict-20230512-094311-V27NVGO.h  list.h
modularizacao/: README.md  triangulo.c
modularization/: main.c
ordenacao/: counting_sort.c  radix_sort.c  radix_sort.h
pilha/: generic_stack.c  stack.c  stack.h
queue/: deque.c  deque.h  generic_priority_queue.c  generic_priority_queue.h  priority_queue.c  queue.c
queues/: generic_deque.c  generic_deque.h  generic_queue.c  generic_queue.h  priority_queue.h  queue.h
sorting/: bubble_sort.h  heap_sort.c  merge_sort.c  quick_sort.c  sorting.h
stack/: generic_stack.h  stack.c  stack.h
test/: test.h  test_avl_tree.c  test_bst.c  test_generic_avl_tree.c  test_generic_bst.c  test_generic_dlist.c  test_generic_list.c  test_generic_priority_queue.c  test_generic_queue.c  test_generic_stack.c  test_main.c  test_queue.c  test_sorting.c  test_stack.c
testes/: test_generic_dlist.c  teste.h  teste_deque.c  teste_dynamic_array.c  teste_generic_deque.c  teste_generic_list.c  teste_generic_queue.c  teste_generic_stack.c  teste_main.c  teste_ordenacao.c  teste_priority_queue.c  teste_queue.c  teste_stack.c  teste_treap.c
tree/: avl_tree.c  avl_tree.h  bst.c  bst.h  generic_avl_tree.c  generic_avl_tree.h  generic_bst.c  generic_bst.h  treap.h  tree.c
trees/: treap.c
utils/: alloc.c  alloc.h
vetor-dinamico/: dynamic_array.c  dynamic_array.h  vector.c  vector.h
(+6 files in other folders)
