add_executable(lista_crud lista_crud.c)
add_executable(pilha_crud pilha_crud.c)
add_executable(fila_crud fila_crud.c)
add_executable(deque_crud deque_crud.c)
add_executable(priority_queue_example priority_queue_example.c)
add_executable(bst_example_1 bst_example_1.c)
add_executable(bst_crud bst_crud.c)
add_executable(sort_example sort_example.c)


include_directories(${CMAKE_SOURCE_DIR}/include)
target_link_libraries(lista_crud list alloc)
target_link_libraries(pilha_crud stack alloc)
target_link_libraries(fila_crud queue alloc)
target_link_libraries(deque_crud queue alloc)
target_link_libraries(priority_queue_example queue alloc)
target_link_libraries(bst_example_1 tree alloc)
target_link_libraries(bst_crud tree alloc)
target_link_libraries(sort_example sorting alloc)

install(TARGETS lista_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS fila_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS pilha_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS deque_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS priority_queue_example RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS bst_example_1 RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS bst_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS sort_example RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
