add_executable(lista_crud lista_crud.c)
add_executable(pilha_crud pilha_crud.c)
add_executable(fila_crud fila_crud.c)
add_executable(deque_crud deque_crud.c)
add_executable(priority_queue_example priority_queue_example.c)
add_executable(bst_example_1 bst_example_1.c)
add_executable(bst_crud bst_crud.c)
add_executable(sort_example sort_example.c)


include_directories(${CMAKE_SOURCE_DIR}/include)
target_link_libraries(lista_crud ed1)
target_link_libraries(pilha_crud ed1)
target_link_libraries(fila_crud ed1)
target_link_libraries(deque_crud ed1)
target_link_libraries(priority_queue_example ed1)
target_link_libraries(bst_example_1 ed1)
target_link_libraries(bst_crud tree ed1)
target_link_libraries(sort_example ed1)

install(TARGETS lista_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS fila_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS pilha_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS deque_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS priority_queue_example RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS bst_example_1 RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS bst_crud RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS sort_example RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
